--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Funky RH !</h1>
+<link rel="stylesheet" href="style.css">
+
+<h1>Funky RH</h1>
+<section class="training">
+    <article>
+        Flexbox
+    </article>
+    <article>
+        Ergonomie
+    </article>
+    <article>
+        Web Semantic
+    </article>
+    <article>
+        Elm
+    </article>
+    <article>
+        Cuisine
+    </article>
+    <article>
+        Event Storming
+    </article>  
+</section>
