--- a/index.html
+++ b/index.html
@@ -19,5 +19,23 @@
     </article>
     <article>
         Event Storming
-    </article>  
+    </article>
+        <article>
+        Flexbox
+    </article>
+    <article>
+        Ergonomie
+    </article>
+    <article>
+        Web Semantic
+    </article>
+    <article>
+        Elm
+    </article>
+    <article>
+        Cuisine
+    </article>
+    <article>
+        Event Storming
+    </article>
 </section>
