--- a/index.html
+++ b/index.html
@@ -1,46 +1,51 @@
-<link rel="stylesheet" href="style.css">
+<link rel=stylesheet href=style.css>
+<meta charset=utf-8>
 
 <h1>Funky RH</h1>
-<section class="training">
+<section class=training>
     <h2>Les ressources</h2>
     <article>
-        Flexbox
+        <h3>Flexbox</h3>
     </article>
     <article>
-        Ergonomie
+        <h3>Ergonomie</h3>
     </article>
     <article>
-        Web Semantic
+        <h3>Web Semantic</h3>
     </article>
     <article>
-        Elm
+        <h3>Elm</h3>
     </article>
     <article>
-        Cuisine
+        <h3>Scrum</h3>
     </article>
     <article>
-        Event Storming
-    </article>
-        <article>
-        Flexbox
-    </article>
-    <article>
-        Ergonomie
+        <h3>Event Storming</h3>
+        <img src="https://image.slidesharecdn.com/workshopeventstorming-131117101430-phpapp02/95/workshop-event-storming-17-638.jpg?cb=1384683475" width=100%>
+        <p>Méthode de visualisation du workflow de toute une équipe.</p>
+        <!--<p><em>Pourquoi :</em> Pour que chacun soit conscient des tâches des autres. Pour donner une vision d'ensemble du fonctionnement d'une application/projet/entreprise.</p>
+        <p><em>Pour qui :</em> Pour les équipes sur projet complexe nécessitant que tout le monde comprenne. Pour les développeurs qui veulent pratiquer le <i>ddd</i>.</p>-->
     </article>
     <article>
-        Web Semantic
+        <h3>Flexbox</h3>
     </article>
     <article>
-        Elm
+        <h3>Ergonomie</h3>
     </article>
     <article>
-        Cuisine
+        <h3>Web Semantic</h3>
     </article>
     <article>
-        Event Storming
+        <h3>Elm</h3>
+    </article>
+    <article>
+        <h3>Scrum</h3>
+    </article>
+    <article>
+        <h3>Event Storming</h3>
     </article>
 </section>
-<section class="trainer">
+<section class=trainer>
     <h2>Les Humains</h2>
     <article>
         Juliette Palumbo
@@ -80,5 +85,8 @@
     </article>
     <article>
         Thomas Wolff
+    </article>
+    <article>
+        Thibault Jouannic
     </article>
 </section>
