--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </article>
     <article>
         <h3>Event Storming</h3>
-        <img src="https://image.slidesharecdn.com/workshopeventstorming-131117101430-phpapp02/95/workshop-event-storming-17-638.jpg?cb=1384683475" width=100%>
+        <img src=img/boulette-avesne.jpg>
         <p>Méthode de visualisation du workflow de toute une équipe.</p>
         <!--<p><em>Pourquoi :</em> Pour que chacun soit conscient des tâches des autres. Pour donner une vision d'ensemble du fonctionnement d'une application/projet/entreprise.</p>
         <p><em>Pour qui :</em> Pour les équipes sur projet complexe nécessitant que tout le monde comprenne. Pour les développeurs qui veulent pratiquer le <i>ddd</i>.</p>-->
