Stylisation des ressources

--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <link rel=stylesheet href=style.css>
 <meta charset=utf-8>
 
-<h1>Funky RH</h1>
+<header>
+    <h1>La Contrée</h1>
+</header>
 <section class=training>
     <h2>Les ressources</h2>
+    <article>
+        <h3>Event Storming</h3>
+        <p class=baseline>La tête dans la tempête</p>
+        <img src=img/boulette-avesne.jpg>
+        <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
+        <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+        <a href=#>En savoir plus</a>
+    </article>
     <article>
         <h3>Flexbox</h3>
     </article>
@@ -18,13 +28,6 @@
     </article>
     <article>
         <h3>Scrum</h3>
-    </article>
-    <article>
-        <h3>Event Storming</h3>
-        <img src=img/boulette-avesne.jpg>
-        <p>Méthode de visualisation du workflow de toute une équipe.</p>
-        <!--<p><em>Pourquoi :</em> Pour que chacun soit conscient des tâches des autres. Pour donner une vision d'ensemble du fonctionnement d'une application/projet/entreprise.</p>
-        <p><em>Pour qui :</em> Pour les équipes sur projet complexe nécessitant que tout le monde comprenne. Pour les développeurs qui veulent pratiquer le <i>ddd</i>.</p>-->
     </article>
     <article>
         <h3>Flexbox</h3>
