corrected humans grid & added margin on card link

--- a/index.html
+++ b/index.html
@@ -164,8 +164,10 @@
     </article>
   </div>
 </section>
+
 <section class=trainer>
   <h2>Les Humains</h2>
+  <div class="grid-3-small-2 has-gutter">
   <article>
     <h3>Pascal Romain<span class=baseline>La tête dans la tempête</span></h3>
     <img src=img/humains/pascal-r.jpg>
@@ -299,4 +301,5 @@
     <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
     <a href=#>En savoir plus</a>
   </article>
+  </div>
 </section>
