--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         <a href=#>En savoir plus</a>
     </article>
     <article>
-        <h3>Stigmergie<span class=baseline>La tête dans la tempête</span></h3>
+        <h3>Stigmergie<span class=baseline>Fourmis, auto-organisation et cocopération à grande échelle</span></h3>
         <img src=img/ressources/iraty.jpg>
-        <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-        <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+        <p>Les fourmis n'ont pas de chef ou de conseil qui décide. La stigmergie est le mode d'auto-organisation </p>
+        <p>utilise par les fourmis, les termites ou de nombreux projets du logiciel libre et allie interet individuel et collectif</p>
         <a href=#>En savoir plus</a>
     </article>
     <article>
