modif section langage de patterns

--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@
         <a href=#>En savoir plus</a>
     </article>
     <article>
-        <h3>Design Pattern<span class=baseline>La tête dans la tempête</span></h3>
+        <h3>Langages de Pattern<span class=baseline>Naviguer dans la complexité</span></h3>
         <img src=img/ressources/st-nectaire-lait-cru.jpg>
-        <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-        <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-        <a href=#>En savoir plus</a>
+        <p>La plupart des langages de patterns fabriqués manquent vie et ne sont pas aussi puissant qu'ils pourraient l'être. Comment co-inventer des langages de patterns réellement vivants ?
+        <a href=#>/langages_de_patterns.md</a>
     </article>
     <article>
         <h3>Pixel art<span class=baseline>La tête dans la tempête</span></h3>
