--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
         <a href=#>En savoir plus</a>
     </article>
     <article>
-        <h3>Jeux créatifs<span class=baseline>La tête dans la tempête</span></h3>
+        <h3>Jeux cocréatifs<span class=baseline>La tête dans la tempête</span></h3>
         <img src=img/ressources/roquefort.jpg>
-        <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-        <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-        <a href=#>En savoir plus</a>
+        <p>Réunionner, conférencer, brainstormer, ... Et si on enrichissait notre vocabulaire du faire-ensemble ?</p>
+        <a href=#>/jeux_cocreatifs.md</a>
     </article>
     <article>
         <h3>Langages de Pattern<span class=baseline>Naviguer dans la complexité</span></h3>
