--- a/index.html
+++ b/index.html
@@ -169,6 +169,13 @@
     <h2>Les Humains</h2>
     <div class="grid-3-small-2 has-gutter">
         <article>
+            <h3>Antoine César<span class=baseline>La tête dans la tempête</span></h3>
+            <img src=img/humains/antoine-c.jpg>
+            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
+            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <a href=#>En savoir plus</a>
+        </article>
+        <article>
             <h3>Pascal Romain<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/pascal-r.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
@@ -246,10 +253,9 @@
             <a href=#>En savoir plus</a>
         </article>
         <article>
-            <h3>Stéphane Langlois<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Stéphane Langlois<span class=baseline>Difficultateur</span></h3>
             <img src=img/humains/stephane-l.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Je crois qu'en partageant nos singularités, nous construisons une communauté saine. Et je crois que de cette communauté saine va émerger une génération d’act.eur.rice.s engagé.e.s, libéré.e.s du contrôle, et des jeux de domination ineptes. Je m'appuie sur une expérience de vingt ans dans les domaines des collectifs, de la facilitation de groupe, du changement organisationnel et des conseils individuels pour nourrir ma quête d'une citoyenneté enthousiaste et apprenante.</p>
             <a href=#>En savoir plus</a>
         </article>
         <article>
