--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <p>La Contrée est un regroupement de professionnel·le·s du numérique qui proposent un catalogue de formations utiles et conviviales.</p>
 
-    <p>*On a hésité avec :*</p>
+    <p><em>On a hésité avec :</em></p>
 
-    <p>*La Contrée est un regroupement de personnes qui n'ont pas d'autres points communs que d'avoir leur nom sur le même site.*</p>
+    <p><em>La Contrée est un regroupement de personnes qui n'ont pas d'autres points communs que d'avoir leur nom sur le même site.</em></p>
 
-    <p>*La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.*</p>
+    <p><em>La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.</em></p>
 
     <h2>Pourquoi La Contrée ?</h2>
 
@@ -41,7 +41,6 @@
         <li>avec l'impression d'avoir passé un bon moment ;</li>
     </ul>
 
-
     <h2>Concrètement, ça veut dire quoi ?</h2>
 
     <p>Dans la mesure ou nous privilégions le sur-mesure et l'adaptabilité, chaque formation se déroule potentiellement de manière unique. Toutefois, voici quelques principes généraux pour se faire une idée du déroulement d'une formation.</p>
@@ -56,16 +55,13 @@
 
     <p>Les formations accueillent entre x et y personnes, pour construire un cadre dynamique, vivant et qui reste convivial.</p>
 
-
     <h2>Je peux voir la liste de vos formations ?</h2>
 
     <p>Oui, c'est par <a href="">là</a>.</p>
 
-
     <h2>Et ça coûte cher ?</h2>
 
     <p>Oui. Mais on boira avec toi pour t'aider à oublier.</p>
-
 
     <h2>Qui sont les membres de La Contrée ?</h2>
 
