ajout des ancres

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <h2>Je peux voir la liste de vos formations ?</h2>
 
-    <p>Oui, c'est par <a href="">là</a>.</p>
+    <p>Oui, c'est par <a href="#trainings">là</a>.</p>
 
     <h2>Et ça coûte cher ?</h2>
 
@@ -65,7 +65,7 @@
 
     <h2>Qui sont les membres de La Contrée ?</h2>
 
-    <p>Nos profils par <a href="">là</a>.</p>
+    <p>Nos profils par <a href="#trainers">là</a>.</p>
 
     <h2> Où se trouve La Contrée ?</h2>
 
@@ -80,7 +80,7 @@
     <p>L'administratif est un moyen, pas une fin. Pour la facture, on voit au cas par cas, en fonction de qui propose la formation.</p>
 </section>
 
-<section class=training>
+<section id=trainings>
     <h2>Les ressources</h2>
     <div class="grid-3 has-gutter">
         <article>
@@ -209,7 +209,7 @@
             </article>
         </div>
     </section>
-    <section class=trainer>
+    <section id=trainers>
         <h2>Les Humains</h2>
         <div class="grid-3 has-gutter">
             <article>
