--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </article>
         <article>
             <h3>Langages de Pattern<span class=baseline>Naviguer dans la complexité</span></h3>
-            <img src=img/ressources/fractal_10.jpg>
+            <img src=img/ressources/salers.jpg>
             <p>La plupart des langages de patterns fabriqués manquent vie et ne sont pas aussi puissant qu'ils pourraient l'être. Comment co-inventer des langages de patterns réellement vivants ?
                 <a href=#>/langages_de_patterns.md</a>
             </article>
@@ -236,6 +236,13 @@
             <article>
                 <h3>Antoine Vernois<span class=baseline>La tête dans la tempête</span></h3>
                 <img src=img/humains/antoine-v.jpg>
+                <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
+                <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+                <a href=#>En savoir plus</a>
+            </article>
+            <article>
+                <h3>Laurent Marsault<span class=baseline>La tête dans la tempête</span></h3>
+                <img src=img/humains/laurent-m.jpg>
                 <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
                 <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
                 <a href=#>En savoir plus</a>
@@ -327,13 +334,6 @@
             <article>
                 <h3>Thibault Jouannic<span class=baseline>La tête dans la tempête</span></h3>
                 <img src=img/humains/thibault-j.jpg>
-                <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-                <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-                <a href=#>En savoir plus</a>
-            </article>
-            <article>
-                <h3>Aurélie Le Guillou<span class=baseline>La tête dans la tempête</span></h3>
-                <img src=img/humains/aurelie-lg.jpg>
                 <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
                 <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
                 <a href=#>En savoir plus</a>
