ajout de base de design sur les pages formations

--- a/contents/stigmergie.html
+++ b/contents/stigmergie.html
@@ -1,14 +1,27 @@
-<h1>Stigmergie</h1>
+<link rel=stylesheet href=../style.css>
+<meta charset=utf-8>
 
-<p>Les fourmis n'ont pas de chef ou de conseil qui décide. La stigmergie est le mode d'auto-organisation utilisé par les fourmis, les termites ou de nombreux projets du logiciel libre. La stigmergie allie intérêt individuel et collectif et permet à la fois un grande souplesse et un travail de qualité à grande échelle.</p>
+<header>
+    <h1>Stigmergie</h1>
+</header>
 
-<p>Pour autant c'est un domaine encore expérimental et sa mise en oeuvre n'est pas aisée. Dans ces conditions, comment faire pour la mettre en oeuvre ?</p>
+<article class=formation>
+
+    <p>Les fourmis n'ont pas de chef ou de conseil qui décide. La stigmergie est le mode d'auto-organisation utilisé par les fourmis, les termites ou de nombreux projets du logiciel libre. La stigmergie allie intérêt individuel et collectif et permet à la fois un grande souplesse et un travail de qualité à grande échelle.</p>
+
+    <p>Pour autant c'est un domaine encore expérimental et sa mise en oeuvre n'est pas aisée. Dans ces conditions, comment faire pour la mettre en oeuvre ?</p>
 
 
-<h2>Mots clés</h2>
+    <h2>Mots clés</h2>
 
-<p>#auto-organisation, #agilite, #gouvernance</p>
+    <ul class=tags>
+        <li>#auto-organisation</li>
+        <li>#agilite</li>
+        <li>#gouvernance</li>
+    </ul>
 
-<h2>Références</h2>
+    <h2>Références</h2>
 
-- http://www.lilianricaud.com/travail-en-reseau/la-stigmergie-un-nouvelle-modele-de-gouvernance-collaborative/
+    <a href="http://www.lilianricaud.com/travail-en-reseau/la-stigmergie-un-nouvelle-modele-de-gouvernance-collaborative/">http://www.lilianricaud.com/travail-en-reseau/la-stigmergie-un-nouvelle-modele-de-gouvernance-collaborative/</a>
+
+</article>
