--- a/contents/langages_de_patterns.html
+++ b/contents/langages_de_patterns.html
@@ -1,7 +1,24 @@
-<p>Architecture, développement logiciel, réunions créatives, éducation en ligne, design, permaculture, les patterns ont été employé utilement dans de nombreux domaines d'activités. </p>
+<link rel=stylesheet href=../style.css>
+<meta charset=utf-8>
 
-<p>Pourtant la plupart des langages de patterns fabriqués manquent vie et ne sont pas aussi puissants qu'ils pourraient l'être.</p>
+<header>
+    <h1>Langages de patterns</h1>
+</header>
 
-<p>Comment co-inventer des langages de patterns réellement vivants ?</p>
+<article class=formation>
+    <p>Architecture, développement logiciel, réunions créatives, éducation en ligne, design, permaculture, les patterns ont été employé utilement dans de nombreux domaines d'activités. </p>
 
-<p>#systemes-complexes, #design, #design-patterns, #permaculture, #agilite</p>
+    <p>Pourtant la plupart des langages de patterns fabriqués manquent vie et ne sont pas aussi puissants qu'ils pourraient l'être.</p>
+
+    <p>Comment co-inventer des langages de patterns réellement vivants ?</p>
+
+    <h2>Mots clés</h2>
+
+    <ul class=tags>
+        <li>#systemes-complexes</li>
+        <li>#design</li>
+        <li>#design-patterns</li>
+        <li>#permaculture</li>
+        <li>#agilite</li>
+    </ul>
+</article>
