--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
             <a href=#>En savoir plus</a>
         </article>
         <article>
-            <h3>Positionnement CSS<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Positionnement CSS<span class=baseline>Agencer sans s'agacer</span></h3>
             <img src=img/ressources/bleu-de-saint-flour.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Se griller les neurones pour positionner un texte, un bloc une image, c'est pas humain.</p>
+            <p>On va jouer avec <em>Flexbox</em> et <em>Grid</em> on va apprendre à positionner les éléments <em>html</em> aux petits oignons.</p>
             <a href=#>En savoir plus</a>
         </article>
         <article>
