remis le pauvre Laurent, supprimé par un manque de poule

--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
             <a href=#>En savoir plus</a>
         </article>
         <article>
+            <h3>Laurent Marsault<span class=baseline>La tête dans la tempête</span></h3>
+            <img src=img/humains/laurent-m.jpg>
+            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
+            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <a href=#>En savoir plus</a>
+        </article>
+        <article>
             <h3>Claude Aubry<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/claude-a.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
