--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 
 <header>
     <h1>La Contrée</h1>
+    <p>Comme des formations, mais mieux. Viens affûter tes outils avec nous.</p>
 </header>
 <section class=intro>
-    <h1>La Contrée</h1>
-
-    <p>Comme des formations, mais mieux. Viens affûter tes outils avec nous.</p>
 
     <h2>Qu'est-ce que c'est ?</h2>
 
     <p>La Contrée est un regroupement de professionnel·le·s du numérique qui proposent un catalogue de formations utiles et conviviales.</p>
 
-    <p><em>On a hésité avec :</em></p>
+    <blockquote>
+        On a hésité avec :
 
-    <p><em>La Contrée est un regroupement de personnes qui n'ont pas d'autres points communs que d'avoir leur nom sur le même site.</em></p>
+        <p>La Contrée est un regroupement de personnes qui n'ont pas d'autres points communs que d'avoir leur nom sur le même site.</p>
 
-    <p><em>La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.</em></p>
+        <p>La Contrée est un collectif d'individus qui savent qu'ils n'arriveront jamais à se mettre d'accord sur rien mais qui continuent à essayer.</p>
+    </blockquote>
 
-    <h2>Pourquoi La Contrée ?</h2>
+    <h3>Pourquoi La Contrée ?</h3>
 
     <p>Les membres de La Contrée présentent des profils divers et variés, mais partagent un certain nombre de constats autour de la formation classique :</p>
 
@@ -41,7 +41,7 @@
         <li>avec l'impression d'avoir passé un bon moment ;</li>
     </ul>
 
-    <h2>Concrètement, ça veut dire quoi ?</h2>
+    <h3>Concrètement, ça veut dire quoi ?</h3>
 
     <p>Dans la mesure ou nous privilégions le sur-mesure et l'adaptabilité, chaque formation se déroule potentiellement de manière unique. Toutefois, voici quelques principes généraux pour se faire une idée du déroulement d'une formation.</p>
 
@@ -55,27 +55,27 @@
 
     <p>Les formations accueillent entre x et y personnes, pour construire un cadre dynamique, vivant et qui reste convivial.</p>
 
-    <h2>Je peux voir la liste de vos formations ?</h2>
+    <h3>Je peux voir la liste de vos formations ?</h3>
 
     <p>Oui, c'est par <a href="#trainings">là</a>.</p>
 
-    <h2>Et ça coûte cher ?</h2>
+    <h3>Et ça coûte cher ?</h3>
 
     <p>Oui. Mais on boira avec toi pour t'aider à oublier.</p>
 
-    <h2>Qui sont les membres de La Contrée ?</h2>
+    <h3>Qui sont les membres de La Contrée ?</h3>
 
     <p>Nos profils par <a href="#trainers">là</a>.</p>
 
-    <h2> Où se trouve La Contrée ?</h2>
+    <h3> Où se trouve La Contrée ?</h3>
 
     <p>Les membres de La Contrée sont répartis sur toute la France, voire vadrouillent aux quatre coins du globe. Mais nous sommes mobiles, tant qu'il y a une gare pas trop loin, on se débrouille.</p>
 
-    <h2>Du coup, vous êtes un organisme de formation, c'est ça ?</h2>
+    <h3>Du coup, vous êtes un organisme de formation, c'est ça ?</h3>
 
     <p>Il n'y a pas de structure administrative derrière La Contrée. Nous sommes toutes et tous déjà indépendant·e·s, salarié·e·s de scops, etc. et disposons pour la plupart de notre propre statut et / ou structure.</p>
 
-    <h2>Du coup, comment ça se passe pour les factures ?</h2>
+    <h3>Du coup, comment ça se passe pour les factures ?</h3>
 
     <p>L'administratif est un moyen, pas une fin. Pour la facture, on voit au cas par cas, en fonction de qui propose la formation.</p>
 </section>
