Ajout du footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <header>
     <h1>La Contrée</h1>
-    <p>Comme des formations, mais mieux. Viens affûter tes outils avec nous.</p>
+    <p>Viens te ressourcer en affûtant tes outils avec nous</p>
 </header>
 <section class=intro>
 
@@ -347,3 +347,6 @@
         </article>
     </div>
 </section>
+<footer>
+    <p>Bordeaux - Toulouse - Paris - Lille - Montpellier - Marseille - Lyon - Nantes - Strasbourg</p>
+</footer>
