--- a/index.html
+++ b/index.html
@@ -217,133 +217,114 @@
             <img src=img/humains/antoine-c.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Pascal Romain<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/pascal-r.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Raphaël Pierquin<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/raphael-p.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Antoine Vernois<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/antoine-v.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Laurent Marsault<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/laurent-m.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Claude Aubry<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/claude-a.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Thomas Parisot<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/thomas-p.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Erick Gardin<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/erick-g.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Maïtané Lenoir<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/maitane-l.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>David Bruant<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/david-b.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Juliette Palumbo<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/juliette-p.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Stéphane Langlois<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/stephane-l.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
+            <p>Je crois qu'en partageant nos singularités, nous construisons une communauté saine. Et je crois que de cette communauté saine va émerger une génération d’acteur.rice.s engagé.e.s, libéré.e.s du contrôle, et des jeux de domination ineptes.</p>
+            <p>J'expérimente dans les domaines des collectifs, de la facilitation de groupe, du changement organisationnel et des conseils individuels pour nourrir ma quête d'une citoyenneté enthousiaste et apprenante.</p>
         </article>
         <article>
             <h3>Alyssa Daoud<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/alyssa-d.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Lilian Ricaud<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/lilian-r.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Julia Barbelane<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/julia-b.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Thomas Wolff<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/thomas-w.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Sabine Safi<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/sabine-s.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Thibault Jouannic<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/thibault-j.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
         <article>
             <h3>Fabien Trégan<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/fabien-t.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-            <a href=#>En savoir plus</a>
         </article>
     </div>
 </section>
