--- a/index.html
+++ b/index.html
@@ -267,10 +267,10 @@
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
         </article>
         <article>
-            <h3>David Bruant<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>David Bruant<span class=baseline>A bridge between machines and people</span></h3>
             <img src=img/humains/david-b.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Développeur web passionné et curieux. David contribue régulièrement à la partie JavaScript de la documentation MDN (Mozilla Developer Network) et donne des conférences pour rendre simples et accessibles au plus grand nombre les complexités des technologies web.</p>
+            <p>Il participe autant que possible aux processus de standardisations des technologies web sur les listes de diffusions où les décisions se prennent (WHATWG, es-discuss, etc.).</p>
         </article>
         <article>
             <h3>Juliette Palumbo<span class=baseline>La tête dans la tempête</span></h3>
@@ -279,7 +279,7 @@
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
         </article>
         <article>
-            <h3>Stéphane Langlois<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Stéphane Langlois<span class=baseline>Chercheur de pépites collaboratives</span></h3>
             <img src=img/humains/stephane-l.jpg>
             <p>Je crois qu'en partageant nos singularités, nous construisons une communauté saine. Et je crois que de cette communauté saine va émerger une génération d’acteur.rice.s engagé.e.s, libéré.e.s du contrôle, et des jeux de domination ineptes.</p>
             <p>J'expérimente dans les domaines des collectifs, de la facilitation de groupe, du changement organisationnel et des conseils individuels pour nourrir ma quête d'une citoyenneté enthousiaste et apprenante.</p>
