--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href=vendor/font-awesome-4.7.0/css/font-awesome.min.css>
 <link rel=stylesheet href=grillade.css>
 <link rel=stylesheet href=style.css>
 <meta charset=utf-8>
@@ -57,7 +58,7 @@
 
     <h3>Je peux voir la liste de vos formations ?</h3>
 
-    <p>Oui, c'est par <a href="#trainings">là</a>.</p>
+    <p>Oui, c'est par <a href=#trainings>là</a>.</p>
 
     <h3>Et ça coûte cher ?</h3>
 
@@ -65,7 +66,7 @@
 
     <h3>Qui sont les membres de La Contrée ?</h3>
 
-    <p>Nos profils par <a href="#trainers">là</a>.</p>
+    <p>Nos profils par <a href=#trainers>là</a>.</p>
 
     <h3> Où se trouve La Contrée ?</h3>
 
@@ -271,6 +272,7 @@
             <img src=img/humains/david-b.jpg>
             <p>Développeur web passionné et curieux. David contribue régulièrement à la partie JavaScript de la documentation MDN (Mozilla Developer Network) et donne des conférences pour rendre simples et accessibles au plus grand nombre les complexités des technologies web.</p>
             <p>Il participe autant que possible aux processus de standardisations des technologies web sur les listes de diffusions où les décisions se prennent (WHATWG, es-discuss, etc.).</p>
+            <span class=links><a href=http://github.com/davidbruant><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/DavidBruant><i class="fa fa-twitter"></i></a> <a href=mailto:&#98;&#114;&#117;&#97;&#110;&#116;&#46;&#100;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;><i class="fa fa-envelope-open"></i></a></span>
         </article>
         <article>
             <h3>Juliette Palumbo<span class=baseline>La tête dans la tempête</span></h3>
@@ -283,6 +285,7 @@
             <img src=img/humains/stephane-l.jpg>
             <p>Je crois qu'en partageant nos singularités, nous construisons une communauté saine. Et je crois que de cette communauté saine va émerger une génération d’acteur.rice.s engagé.e.s, libéré.e.s du contrôle, et des jeux de domination ineptes.</p>
             <p>J'expérimente dans les domaines des collectifs, de la facilitation de groupe, du changement organisationnel et des conseils individuels pour nourrir ma quête d'une citoyenneté enthousiaste et apprenante.</p>
+            <span class=links><a href=http://github.com/pointbar><i class="fa fa-github-alt"></i></a> <a href=http://twitter.com/langlois_s><i class="fa fa-twitter"></i></a>  <a href=mailto:&#115;&#116;&#101;&#112;&#104;&#97;&#110;&#101;&#46;&#108;&#97;&#110;&#103;&#108;&#111;&#105;&#115;&#64;&#115;&#99;&#111;&#112;&#121;&#108;&#101;&#102;&#116;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a></span>
         </article>
         <article>
             <h3>Alyssa Daoud<span class=baseline>La tête dans la tempête</span></h3>
