--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
             <img src=img/humains/antoine-c.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <span class=links><a href=https://github.com/AntoineCezar><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/AntoineCezar><i class="fa fa-twitter"></i></a> <a href=mailto:&#97;&#110;&#116;&#111;&#105;&#110;&#101;&#64;&#99;&#101;&#122;&#97;&#114;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a></span>
         </article>
         <article>
             <h3>Pascal Romain<span class=baseline>La tête dans la tempête</span></h3>
