--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
             <img src=img/humains/pascal-r.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <span class=links><a href=https://github.com/akakeronos><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/keronos><i class="fa fa-twitter"></i></a> </span>
         </article>
         <article>
             <h3>Raphaël Pierquin<span class=baseline>La tête dans la tempête</span></h3>
