--- a/index.html
+++ b/index.html
@@ -352,7 +352,9 @@
             <img src=img/humains/raphael-p.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
-        </article>
+            <span class=links><a href=https://github.com/raphaelpierquin><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/perafoo><i class="fa fa-twitter"></i></a> <a href=mailto:&#114;&#97;&#112;&#104;&#97;&#101;&#108;&#64;&#117;&#116;&#55;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a></span>
+ 
+       </article>
         <article>
             <h3>Antoine Vernois<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/antoine-v.jpg>
