Icones Antoine V & Laurent M

--- a/index.html
+++ b/index.html
@@ -353,19 +353,20 @@
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links><a href=https://github.com/raphaelpierquin><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/perafoo><i class="fa fa-twitter"></i></a> <a href=mailto:&#114;&#97;&#112;&#104;&#97;&#101;&#108;&#64;&#117;&#116;&#55;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a></span>
- 
        </article>
         <article>
             <h3>Antoine Vernois<span class=baseline>La tête dans la tempête</span></h3>
             <img src=img/humains/antoine-v.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <span class=links><a href=https://github.com/avernois><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/avernois><i class="fa fa-twitter"></i></a> </span>
         </article>
         <article>
-            <h3>Laurent Marsault<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Laurent Marseault<span class=baseline>Secoueur de cocotiers</span></h3>
             <img src=img/humains/laurent-m.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <span class=links><a href=https://github.com/furax37><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/furax37><i class="fa fa-twitter"></i></a> <a href=&#108;&#97;&#117;&#114;&#101;&#110;&#116;&#64;&#109;&#97;&#114;&#115;&#101;&#97;&#117;&#108;&#116;&#46;&#105;&#110;&#102;&#111;><i class="fa fa-envelope-open"></i></a></span>
         </article>
         <article>
             <h3>Claude Aubry<span class=baseline>La tête dans la tempête</span></h3>
