--- a/index.html
+++ b/index.html
@@ -334,14 +334,14 @@
     <h2>Les Humains</h2>
     <div class="grid-3 has-gutter">
         <article>
-            <h3>Antoine César<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Antoine César<span class=baseline>Software Troublemaker</span></h3>
             <img src=img/humains/antoine-c.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
             <span class=links><a href=https://github.com/AntoineCezar><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/AntoineCezar><i class="fa fa-twitter"></i></a> <a href=mailto:&#97;&#110;&#116;&#111;&#105;&#110;&#101;&#64;&#99;&#101;&#122;&#97;&#114;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a></span>
         </article>
         <article>
-            <h3>Pascal Romain<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Pascal Romain<span class=baseline>ingénieur documentaire transfuge agent triple-store</span></h3>
             <img src=img/humains/pascal-r.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
@@ -355,7 +355,7 @@
             <span class=links><a href=https://github.com/raphaelpierquin><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/perafoo><i class="fa fa-twitter"></i></a> <a href=mailto:&#114;&#97;&#112;&#104;&#97;&#101;&#108;&#64;&#117;&#116;&#55;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a></span>
        </article>
         <article>
-            <h3>Antoine Vernois<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Antoine Vernois<span class=baseline>Faites des trucs</span></h3>
             <img src=img/humains/antoine-v.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
@@ -369,10 +369,11 @@
             <span class=links><a href=https://github.com/furax37><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/furax37><i class="fa fa-twitter"></i></a> <a href=&#108;&#97;&#117;&#114;&#101;&#110;&#116;&#64;&#109;&#97;&#114;&#115;&#101;&#97;&#117;&#108;&#116;&#46;&#105;&#110;&#102;&#111;><i class="fa fa-envelope-open"></i></a></span>
         </article>
         <article>
-            <h3>Claude Aubry<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Claude Aubry<span class=baseline>L'happy permaculteur</span></h3>
             <img src=img/humains/claude-a.jpg>
             <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <span class=links><a href=https://github.com/claudeaubry><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/claudeaubry><i class="fa fa-twitter"></i></a></span>
         </article>
         <article>
             <h3>Thomas Parisot<span class=baseline>La tête dans la tempête</span></h3>
@@ -443,10 +444,12 @@
             <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
         </article>
         <article>
-            <h3>Thibault Jouannic<span class=baseline>La tête dans la tempête</span></h3>
+            <h3>Thibault Jouannic<span class=baseline>Mon nom est Thibault</span></h3>
             <img src=img/humains/thibault-j.jpg>
-            <p>Juste avant de coder, il faut savoir <em>quoi</em> coder.</p>
-            <p>EventStorming est une approche simple pour partager et construire une connaissance du domaine métier de façon collaborative.</p>
+            <p>Je suis Thibault Jouannic, ingénieur Web indépendant (en profession libérale). Je réalise des prestations de développement logiciel spécifiques sur le Web.</p>
+            <p>Je travaille avec des technologies ouvertes ayant fait leurs preuves pour produire des logiciels utiles, stables et durables.</p>
+            <p>Je suis un fervent adepte des méthodologies agiles qui favorisent l'émergence de logiciels de qualité à travers une collaboration franche et ouverte. Par conséquent, je ne travaille pas au forfait.</p>
+            <span class=links><a href=https://github.com/thibault><i class="fa fa-github-alt"></i></a> <a href=https://twitter.com/thibaultj><i class="fa fa-twitter"></i></a> <a href=mailto:&#116;&#104;&#105;&#98;&#97;&#117;&#108;&#116;&#64;&#106;&#111;&#117;&#97;&#110;&#110;&#105;&#99;&#46;&#102;&#114;><i class="fa fa-envelope-open"></i></a></span>
         </article>
         <article>
             <h3>Fabien Trégan<span class=baseline>La tête dans la tempête</span></h3>
