Ajout email a tom et changement de couleur des icones

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href=vendor/font-awesome-4.7.0/css/font-awesome.min.css>
+<link rel=stylesheet href=vendor/font-awesome-4.7.0/css/font-awesome.min.css>
 <link rel=stylesheet href=grillade.css>
 <link rel=stylesheet href=style.css>
 <meta charset=utf-8>
@@ -156,6 +156,7 @@
                 <a href=https://github.com/oncletom><i class="fa fa-github-alt"></i></a>
                 <a href=https://twitter.com/oncletom><i class="fa fa-twitter"></i></a>
                 <a href=https://oncletom.io><i class="fa fa-sitemap"></i></a>
+                <a href=mailto:&#104;&#105;&#64;&#111;&#110;&#99;&#108;&#101;&#116;&#111;&#109;&#46;&#105;&#111;><i class="fa fa-envelope-open"></i></a>
             </span>
         </article>
         <article>
